# qt-app

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp  qml.qrc
android/: AndroidManifest.xml  build.gradle
android/src/app/qt5example/: QnActivity.java
ios/: Info.plist
qml/: main.qml
src/: CMakeLists.txt
src/cmake/: ios.cmake
